--- a/style.css
+++ b/style.css
@@ -95,7 +95,49 @@ nav ul li a:hover {
 .hamburger div:not(:last-child){
     margin-bottom: 5px;
 }
-
+/* Obimdike's contribution */
+.footer{
+    background-color: var(--VeryDarkViolet);
+    padding: 50px 0;
+    position: absolute;
+    right: 0;
+    left: 0;
+    bottom: 0;
+    
+}
+.con{
+    max-width: 1170px;
+    margin: auto;
+}
+ul{
+    list-style: none;
+}
+.row{
+    display: flex;
+    flex-wrap: wrap;
+}
+.footer-col{
+    width: 25%;
+    padding: 0 659px;
+    
+}
+.footer-col h4{
+    font-size: 18px;
+    color: white;
+    margin-bottom: 30px;
+    font-weight: 500;
+    position: relative;
+}
+.footer-col ul li a{
+    font-size: 16px;
+    text-decoration: none;
+    color: gray;
+    font-weight: 300;
+    display: block;
+}
+.footer-col ul li a:hover{
+    color: var(--Cyan);
+}
 /* HEADER RESPONSIVENESS: */
 
 @media (max-width: 1000px){
@@ -112,3 +154,273 @@ nav ul li a:hover {
         display: none;
     }
 }
+
+/* Imo and Doumo*/
+section{
+    display: flex;
+    justify-content: space-between;
+}
+.content{
+    margin: 90px 0 0 130px;
+    width: 30%;
+
+}
+.More{
+    font-size: 48px;
+    font-weight: 800;
+    color: var(--VeryDarkViolet);
+}
+.build{
+    color: var(--GrayishViolet);
+    font-size: 14px;
+}
+.get-started{
+    color: white;
+    background-color: var(--Cyan);
+    padding: 7px 20px;
+    border-radius: 25px;
+    width: 35%;
+    text-align: center;
+    margin-block-start: 10px;
+    margin-block-end: 10px;
+    cursor: pointer;
+}
+.get-started:hover{
+    background-color: hsl(180, 66%, 55%);
+}
+.illus{
+    margin: 70px 0 50px 0;
+    width: 43%;
+}
+.illus img{
+    width: 100%;
+}
+/* End of section by Imo Peter and Doumo Ngumezi */
+@media(max-width:1237px){
+    /* By Doumo and Imo */
+    .content{
+        width: 40%;  
+        margin: 50px 0 0 105px;   
+   }
+   /* End of section by Imo Peter and Doumo Ngumezi */
+
+}
+
+/* The Shorten link section styling */
+section{
+    width: 80%;
+    margin: 0 auto;
+    padding-top: 30px;
+    font-size: 14px;
+}
+.link-section{
+    background-image: url(./images/bg-shorten-desktop.svg);
+    background-size: cover;
+    background-color: var(--GrayishViolet);
+    border-radius: 5px;
+    padding: 30px;
+    display: flex;
+    flex-direction: column;
+}
+
+.shorten-it{
+    cursor: pointer;
+    color: white;
+    text-align: center;
+    word-wrap: break-word;
+    background-color: var(--Cyan);
+    padding: 7px 20px;
+    border-radius: 10px;
+    max-width: 1024px;
+    width: 20%;
+    height: 40px;
+    border: none;
+}
+.shorten-it:hover{
+    background-color: hsl(180, 66%, 55%)
+}
+input{
+padding: 10px;
+margin-right:10px;
+border-radius: 10px;
+width: 75%;
+border: solid var(--Red);
+}
+input:focus{
+    outline: none;
+}
+::placeholder{
+    color: var(--Red);
+}
+.p-link{
+    color: var(--Red);
+    font-style: italic;
+    margin: 5px;
+}
+.p-link2{
+    color: var(--Red);
+    font-style: italic;
+    display: none;
+    margin: 5px;
+}
+.link{
+    background-color: rgb(241, 240, 240);
+    border-radius: 5px;
+    margin: 10px 0;
+    padding: 20px;
+    display: flex;
+    justify-content: space-between;
+}
+.link-but{
+    display: flex;
+    justify-content: center;
+}
+.link-p{
+    word-break: break-all;
+    margin-top: 10px;
+}
+.link-but p{
+    color: var(--Cyan);
+    align-items: center;
+}
+.link-copi{
+    cursor: pointer;
+    color: white;
+    background-color: var(--Cyan);
+    padding: 10px 20px;
+    margin-left: 10px;
+    border-radius: 5px;
+    border: none;
+}
+.link-copi:hover{
+    background-color: hsl(180, 66%, 55%)
+}
+.link-copy{
+    cursor: pointer;
+    color: white;
+    background-color: var(--Cyan);
+    padding: 10px 20px;
+    margin-left: 10px;
+    border-radius: 5px;
+    border: none;
+}
+.link-copy:hover{
+    background-color: hsl(180, 66%, 55%)
+}
+.link-copied{
+    color: white;
+    background-color: var(--DarkViolet);
+    padding: 10px 13px;
+    margin-left: 10px;
+    border-radius: 5px;
+    border: none;
+}
+hr{
+    display: none;
+    margin: 10px 0;
+    
+}
+/* SHORTEN LINK RESPONSIVENESS */
+@media (max-width: 1200px){
+    section{
+        width: 90%;
+    }
+}
+@media (max-width: 768px){
+    input{
+        margin-right: 10px;
+        }
+        .shorten-it{
+            width: 20%;
+            height: 60px;
+            font-size: 13px;
+        }
+        
+}
+@media (max-width:576px){
+    .link-section{
+        background-image: url(./images/bg-shorten-mobile.svg);
+        background-size: 100%;
+        background-repeat: no-repeat;
+    }
+    input{
+        width: 100%;
+        height: 50px;
+        }
+        .shorten-it{
+            width: 100%;
+            font-size: 4vw;
+        }
+        .links{
+            text-align: center;
+        }
+        .link{
+            display: grid;
+        }
+        .link-but{
+            display: grid;
+            justify-content: left;
+        }
+        .link-copy{
+            padding: 10px 94%;
+            font-size: 4vw;
+            margin-top: 10px;
+            margin-left: none;
+           
+        }
+        .link-copi{
+            padding: 10px 100%;
+            font-size: 4vw;
+            margin-top: 10px;
+            margin-left: none;
+        }
+        .link-copied{
+            padding: 10px 92%;
+            font-size: 4vw;
+            margin-top: 10px;
+            margin-left: none;
+            /* border: none; */
+        }
+        .link-p{
+            font-size: 4vw;
+            text-align: left;
+        }
+        .p-link{
+            display: none;
+        }
+        .p-link2{
+            margin: 10px;
+            display: block;
+        }
+
+        hr{
+            display: block;
+        }
+}
+@media (max-width:425px){
+    .link-section{
+        background-image: url(./images/bg-shorten-mobile.svg);
+        background-size: 100%;
+        background-repeat: no-repeat;
+    }
+    .link-copi{
+        padding: 10px 96%;
+        font-size: 4vw;
+        margin-top: 10px;
+        margin-left: none;
+    }
+    .link-copy{
+        padding: 10px 90%;
+        font-size: 4vw;
+        margin-top: 10px;
+        margin-left: none;
+    }
+    .link-copied{
+        padding: 10px 89%;
+        font-size: 4vw;
+        margin-top: 10px;
+        margin-left: none;
+        border: none;
+    }
+}
+/* End of url link section stylimg/responsive */
