--- a/style.css
+++ b/style.css
@@ -434,3 +434,186 @@ hr{
     }
 }
 /* End of url link section stylimg/responsive */
+
+
+/* Nuel Chucks */
+
+.content1 {
+    background-color: rgb(247, 239, 239);
+    height: 100vh;
+    width: 80%;
+    position: relative;
+    margin-top: 3%;
+    padding-top: 8%;
+    margin-left: 10%;
+    text-align: center;
+   
+}
+.head {
+    margin-bottom: 3%;
+}
+.head > p {
+    color: var(--GrayishViolet); 
+    line-height: 1.7em;
+    font-weight: 500;
+}
+.head > h1 {
+    color:  var(--VeryDarkViolet);
+}
+h1 {
+    margin-bottom: 2%;
+}
+.features {
+    position: relative;
+    display: flex;
+    margin-left: 3%;
+    margin-top: 7%;
+}
+.ft1 > p {
+    font-size: 14px;
+    color: var(--GrayishViolet);
+    line-height: 1.7em;
+}
+.ft2 > p {
+    font-size: 14px;
+    color: var(--GrayishViolet);
+    line-height: 1.7em;
+}
+.ft3 > p {
+    font-size: 14px;
+    color: var(--GrayishViolet);
+    line-height: 1.7em;
+}
+h3 {
+    margin-bottom: 4%;
+    font-size: large;
+    color: var(--VeryDarkViolet);
+}
+.ft1 {
+    position: absolute;
+    background-color: white;
+    padding: 80px 25px 35px;
+    text-align: justify;
+    border-radius: 10px;
+    margin-left: 2%;
+    
+}
+.ft2 {
+    position: absolute;
+    background-color: white;
+    padding: 80px 25px 35px;
+    text-align: justify;
+    border-radius: 10px;
+    margin-top: 3%;
+    margin-left: 34%;
+}
+.ft3 {
+    position: absolute;
+    background-color: white;
+    padding: 80px 25px 35px;
+    text-align: justify;
+    margin-top: 5.5%;
+    border-radius: 10px;
+    margin-left: 67.2%;
+
+}
+#img1 {
+    position: absolute;
+    background-color: var(--VeryDarkViolet);
+    border-radius: 50%;
+    padding: 18px;
+    top: -30px;
+}
+#img2 {
+    position: absolute;
+    background-color: var(--VeryDarkViolet);
+    border-radius: 50%;
+    padding: 18px;
+    top: -30px;
+}
+#img3 {
+    position: absolute;
+    background-color: var(--VeryDarkViolet);
+    border-radius: 50%;
+    padding: 18px;
+    top: -30px;
+}
+.bar1 {
+    position: absolute;
+    width: 37px;
+    height: 7px;
+    background-color: var(--GrayishViolet);
+    margin-left: 30.7%;
+    margin-top: 15%;
+    z-index: 0;
+}
+.bar2 {
+    position: absolute;
+    width: 37px;
+    height: 7px;
+    background-color: var(--GrayishViolet);
+    margin-left: 63.6%;
+    margin-top: 15%;
+    z-index: 1;
+}
+
+/* Container Responsiveness */
+
+@media  (max-width: 768px) {
+
+    .content1 {
+        right: 5%;
+        height: 1100px;
+        width: 690px;
+    }
+    .features {
+        display: block;
+        margin-top: 10%;
+        width: 100vw;
+       
+    }
+    .ft1 {
+        margin-left: 28%;
+        padding: 80px 20px 35px;
+        text-align: center;
+       width: 300px;
+    }
+    .ft2 {
+        margin-top: 39%;
+        margin-left: 28%;
+        padding: 80px 20px 35px;
+        width: 300px;
+        text-align: center;
+    }
+    .ft3 {
+        margin-top: 78.5%;
+        margin-left: 28%;
+        padding: 80px 20px 35px;
+        text-align: center;
+        width: 300px;
+    }
+    #img1 {
+        margin-left: -9%;
+    }
+    #img2 {
+        margin-left: -9%;
+    }
+    #img3 {
+        margin-left: -9%;
+        z-index: 1;
+    }
+    
+    .bar1 {
+        margin-top: 33.9%;
+        margin-left: 46%;
+        width: 36px;
+        transform: rotate(90deg);
+    }
+    .bar2 {
+        margin-top: 73%;
+        margin-left: 46%;
+        width: 30px;
+        transform: rotate(90deg);
+    }
+}
+/* End */
